# genq-question_gen

./: .gitignore  package-lock.json  package.json  vercel.json
backend-api/: Dockerfile  README-RUN.md  alembic.ini  pyproject.toml
backend-api/alembic/: env.py
backend-api/alembic/versions/: 0001_initial.py
backend-api/app/: __init__.py  cli.py  main.py
backend-api/app/api/v1/: router.py
backend-api/app/api/v1/endpoints/: assets.py  auth.py  generation.py  resources.py
backend-api/app/core/: config.py  logging.py  metrics.py  rbac.py  security.py
backend-api/app/db/: models.py  session.py
backend-api/app/schemas/: auth.py  common.py  generation.py
backend-api/app/services/: demo_store.py  ingestion.py  orchestration.py  storage.py  vector.py
backend-api/genque_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend-api/tests/: conftest.py  test_auth.py  test_demo_store.py
sme-web/: Dockerfile  README-RUN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite-dev-live.err  vite-dev.err  vite.config.ts  vitest.config.ts
sme-web/src/: App.tsx  index.css  main.tsx
sme-web/src/context/: AuthContext.tsx  HistoryContext.tsx
sme-web/src/data/: mockData.js
sme-web/src/lib/: api.ts  constants.ts  exportUtils.js  rbac.ts
sme-web/src/pages/: Analytics.tsx  AssessmentBuilder.tsx  AuditLog.tsx  Dashboard.tsx  Integrations.tsx  ListDetailPage.tsx  Notifications.tsx  OrganizationManagement.tsx  PersonalListsPage.tsx  ProjectManagement.tsx  QuestionBank.tsx  QuestionEditor.tsx  ReviewQueue.tsx  (+7 more)
(+34 files in other folders)
