[project]
name = "genque-api"
version = "0.1.0"
description = "FastAPI backend for GenQue"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "email-validator>=2.2.0",
  "SQLAlchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "redis>=5.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "prometheus-client>=0.21.0",
  "python-json-logger>=2.0.7",
  "python-multipart>=0.0.17",
  "boto3>=1.35.0",
  "pymilvus>=2.5.0",
  "pgvector>=0.3.6",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "pytesseract>=0.3.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0"
]
multimodal = [
  "openai-whisper>=20240930",
  "ffmpeg-python>=0.2.0"
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*"]

[tool.coverage.report]
fail_under = 60
